# ansible-role-aws-cli

./: .copier-answers.yaml  .copier-answers.yml  .editorconfig  .gitignore  .mdformat.toml  .pre-commit-config.yaml  .yamlfmt.yaml  .yamllint.yaml  CHANGELOG.md  CONTRIBUTE.md  CONTRIBUTING.md  DEVELOP.md  DEVELOPMENT.md  Justfile  LICENSE  MAINTAIN.md  NOTICE  README.md  RELEASE.md  Taskfile.yaml  mise.toml  playbook.yaml  pyproject.toml  renovate.json5  requirements.txt
.ansible/roles/: trallnag.aws_cli
.devcontainer/: .env  Dockerfile  README.md  devcontainer.json  docker-compose.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yaml
.github/workflows/: ci.yaml  dev-cont.yaml  format-lint-test.yaml  import.yaml  poetry-updates.yaml  pre-commit-update.yaml  pre-commit-updates.yaml  pre-commit.yaml  primary.yaml  python-poetry-update.yaml  release.yaml  secondary.yaml
.local/node/: package-lock.json
defaults/: main.yaml  main.yml
devel/: pre-commit.md  task.md
docs-internal/: pre-commit.md  semantic-release.md
docs/devel/: just.md  pre-commit.md  task.md
handlers/: main.yaml
meta/: argument_specs.yaml  argument_specs.yml  main.yaml  main.yml
molecule/default/: converge.yml  molecule.yml  side_effect.yml  side_effect_2_latest.yml  (+4 more)
node/: package-lock.json  package.json
scripts/: create-release-notes.bash  extract-notes.py  extract-release-notes.py  get-python-version.sh  run-pre-commit-checks.bash  run-pre-commit-fixes.bash
tasks/: install-cli.yml  install-ssm.yml  main.yml
vars/: Debian.yml  main.yaml  main.yml  os-debian.yaml  os-redhat.yaml
(+6 files in other folders)
