[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
name = "ansible-role-aws-cli"

[tool.poetry.dependencies]
python = "^3.12"

ansible = "^11.1.0"
docker = "^7.1.0"
molecule = "^24.9.0"

ansible-lint = { version = "^24.10.0", markers = "platform_system != 'Windows'" }

molecule-plugins = { version = "^23.6.0", extras = ["docker"] }
