[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
name = "ansible-role-aws-cli"

[tool.poetry.dependencies]
python = "^3.12"

ansible = "^11.7.0"
docker = "^7.1.0"
molecule = "^25.6.0"

ansible-lint = { version = "^25.6.1", markers = "platform_system != 'Windows'" }

molecule-plugins = { version = "^23.7.0", extras = ["docker"] }
