[project]

name = "ansible-role-aws-cli"

description = ""

authors = [
  {name = "Tim Schwenke", email = "tim@trallnag.com"},
]

version = "1.0.0"

license = "ISC"

license-files = ["LICENSE"]

requires-python = ">= 3.12"

dependencies = [
    "ansible >= 11.7.0",
    "ansible-lint >= 25.6.1 ; sys_platform != 'win32'",
    "docker >= 7.1.0",
    "molecule >= 25.6.0",
    "molecule-plugins[docker] >= 23.7.0",
]

readme = "README.md"

[tool.uv]

package = false
